[gd_scene load_steps=23 format=3 uid="uid://w545ojpg42fv"]

[ext_resource type="Texture2D" uid="uid://6efu3by5pfyw" path="res://sprites/simonsays.png" id="1_bhtfb"]
[ext_resource type="Script" path="res://minigames/simonminigame.gd" id="1_yn1b0"]
[ext_resource type="Texture2D" uid="uid://bne0yyytuxbcg" path="res://sprites/simonsayshover1.png" id="2_jqvuk"]
[ext_resource type="Texture2D" uid="uid://d04is5054a4rt" path="res://sprites/simonsayshover.png" id="3_hc7tj"]
[ext_resource type="AudioStream" uid="uid://bkaeip6x0xwjy" path="res://sounds/simonsayshover1.ogg" id="4_6hp52"]
[ext_resource type="Texture2D" uid="uid://d3qkt2u05ntpq" path="res://sprites/simonsayshover3.png" id="4_b3r4k"]
[ext_resource type="Texture2D" uid="uid://crruwtr6iauo3" path="res://sprites/simonsayshover2.png" id="5_jdkic"]
[ext_resource type="AudioStream" uid="uid://c732wff05vnik" path="res://sounds/simonsayshover2.ogg" id="5_krs44"]
[ext_resource type="AudioStream" uid="uid://dgx5eakb5xmsh" path="res://sounds/simonsayshover3.ogg" id="6_61se8"]
[ext_resource type="AudioStream" uid="uid://db6q8yi706s4" path="res://sounds/simonsayshover.ogg" id="7_804bu"]
[ext_resource type="AudioStream" uid="uid://ceg0l7fsef0gx" path="res://sounds/simonsayslost.ogg" id="11_7732v"]

[sub_resource type="Animation" id="Animation_i5a4c"]
resource_name = "0"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite2d/hover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sfx")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_804bu")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_unx4c"]
resource_name = "0u"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite2d/hover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(0.533333, 0.854902, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sfx")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_804bu")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_g8cwp"]
resource_name = "1"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite2d/hover1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sfx")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_6hp52")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_u0nuv"]
resource_name = "1u"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite2d/hover1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(0.533333, 0.854902, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sfx")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_6hp52")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_m63uw"]
resource_name = "2"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite2d/hover2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sfx")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_krs44")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_5ur6l"]
resource_name = "2u"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite2d/hover2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(0.533333, 0.854902, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sfx")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_krs44")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_6askt"]
resource_name = "3"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite2d/hover3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sfx")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_61se8")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_p880p"]
resource_name = "3u"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite2d/hover3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(0.533333, 0.854902, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sfx")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_61se8")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_jjch4"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite2d/hover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite2d/hover1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite2d/hover2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sprite2d/hover3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("sprite2d:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("sprite2d:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vd3p1"]
resource_name = "lost"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite2d:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite2d:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 0, 0.415686, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sfx")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("11_7732v")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jlt7l"]
_data = {
"0": SubResource("Animation_i5a4c"),
"0u": SubResource("Animation_unx4c"),
"1": SubResource("Animation_g8cwp"),
"1u": SubResource("Animation_u0nuv"),
"2": SubResource("Animation_m63uw"),
"2u": SubResource("Animation_5ur6l"),
"3": SubResource("Animation_6askt"),
"3u": SubResource("Animation_p880p"),
"RESET": SubResource("Animation_jjch4"),
"lost": SubResource("Animation_vd3p1")
}

[node name="simonminigame" type="Node2D"]
scale = Vector2(1.00734, 1)
script = ExtResource("1_yn1b0")

[node name="sprite2d" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_bhtfb")

[node name="hover" type="TextureButton" parent="sprite2d"]
modulate = Color(1, 1, 1, 0)
offset_left = -31.7667
offset_top = -32.0
offset_right = 0.233252
texture_normal = ExtResource("3_hc7tj")

[node name="hover1" type="TextureButton" parent="sprite2d"]
modulate = Color(1, 1, 1, 0)
offset_top = -32.0
offset_right = 32.0
texture_normal = ExtResource("2_jqvuk")

[node name="hover2" type="TextureButton" parent="sprite2d"]
modulate = Color(1, 1, 1, 0)
offset_left = -31.7667
offset_right = 0.233252
offset_bottom = 32.0
texture_normal = ExtResource("5_jdkic")

[node name="hover3" type="TextureButton" parent="sprite2d"]
modulate = Color(1, 1, 1, 0)
offset_right = 32.0
offset_bottom = 32.0
texture_normal = ExtResource("4_b3r4k")

[node name="animationplayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jlt7l")
}

[node name="sfx" type="AudioStreamPlayer" parent="."]
